--- a/confirmation.html
+++ b/confirmation.html
@@ -62,7 +62,7 @@
   </style>
 </head>
 <body>
-  <img class="logo" src="logo.png" alt="Box Alarm Concepts Logo" />
+  <img class="logo" src="https://github.com/boxalarmconcepts/site/blob/main/assets/boxalarm-logo.png?raw=true" alt="Box Alarm Concepts Logo" />
   <h1>Submission Received</h1>
   <p>Thank you for reaching out! We've logged your request and sent a confirmation to your inbox.</p>
   <p>Our team will review your submission within 48 hours and get back to you.</p>
